lib directory required in build script

--- a/build.xml
+++ b/build.xml
@@ -45,7 +45,7 @@
     <property name="classes.dir" value="${modinf.dir}/classes" />
 
     <path id="class.path">
-        <fileset dir="${lib.dir}" erroronmissingdir="false">
+        <fileset dir="${lib.dir}" erroronmissingdir="true">
             <include name="**/*.jar" />
         </fileset>
         <fileset dir="${refine.lib.dir}">
