--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 */target/**
 .classpath
 /.settings
+/module/MOD-INF/classe/**
+/resources/models/**
+/src/com/google/refine/quality/vocabularies/**
