--- a/build.xml
+++ b/build.xml
@@ -59,7 +59,7 @@
     
 	<java classname="jena.schemagen" >
 		<classpath refid="class.path" />
-		<arg line="-i resources/vocabularies/qr/qr.trig -e N3 --inference --package com.google.refine.quality.vocabularies -o src/ -n QR" />
+		<arg line="-i resources/vocabularies/qprob/qprob.trig -e N3 --inference --package com.google.refine.quality.vocabularies -o src/ -n QPROB" />
 	</java>
 	
     <target name="build_java">
