--- a/build.xml
+++ b/build.xml
@@ -56,6 +56,8 @@
         <classpath refid="class.path" />
         <arg line="-i ${basedir}/resources/vocabularies/qprob/qprob.trig -e N3 --inference --package
             com.google.refine.quality.vocabularies -o src/ -n QPROB" />
+         <arg line="-i ${basedir}/resources/vocabularies/qr/qr.trig -e N3 --inference --package
+            com.google.refine.quality.vocabularies -o src/ -n QR" />
     </java>
 
     <target name="build_java">
