--- a/module/MOD-INF/module.properties
+++ b/module/MOD-INF/module.properties
@@ -1,4 +1,4 @@
 name = quality-extension
 description = Diachron Quality Extension
-templating.macros = macros.vm
+#templating.macros = macros.vm
 requires = core
